# zna

./: BIOCONDA_SUBMISSION.md  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  PERFORMANCE.md  PUBLISHING.md  QUICKSTART_PYPI.md  README.md  TEST_SUMMARY.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
conda/: meta.yaml
docs/: BIOCONDA_SUBMISSION.md  CODE_REVIEW.md  COLUMNAR_FORMAT_RESULTS.md  COMPRESSION_ANALYSIS.md  FUTURE.md  GITHUB_ACTIONS_SETUP.md  PERFORMANCE.md  PROFILING_ANALYSIS.md  PUBLISHING.md  QUICKSTART_PYPI.md  README.md  RELEASE.md  RELEASING.md  UNSTRANDED_NORMALIZATION.md
examples/: labels.yaml
scripts/: benchmark.py  benchmark_columnar.py  benchmark_perf.py  perf_analysis.py  profile_labels.py  prototype_columnar.py  prototype_realistic.py  release.sh  update-conda-sha.sh
src/zna/: __init__.py  _accel.cpp  _pycodec.py  _shuffle.py  cli.py  codec.py  core.py  dtypes.py
tests/: test_accel_labels.py  test_cli.py  test_core.py  test_label_file.py  test_labels.py
