[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "zna"
version = "0.1.0"
description = "Compressed (z) Nucleic (n) Acid (a) binary format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}

authors = [
  {name = "Matthew Iyer", email = "mkiyer@umich.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "zstandard"
]

[project.scripts]
# This creates the 'zna' command line tool
zna = "zna.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
wheel.packages = ["src/zna"]
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.15"
cmake.build-type = "Release"