[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "zna"
dynamic = ["version"]
description = "High-performance compressed binary format for DNA/RNA sequences with 2-bit encoding and Zstd compression"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
keywords = ["bioinformatics", "genomics", "compression", "dna", "rna", "fastq", "fasta", "sequencing"]

authors = [
  {name = "Matthew Iyer", email = "mkiyer@umich.edu"}
]

maintainers = [
  {name = "Matthew Iyer", email = "mkiyer@umich.edu"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: System :: Archiving :: Compression",
]

dependencies = [
    "zstandard>=0.20.0"
]

[project.urls]
Homepage = "https://github.com/mkiyer/zna"
Documentation = "https://github.com/mkiyer/zna#readme"
Repository = "https://github.com/mkiyer/zna.git"
Issues = "https://github.com/mkiyer/zna/issues"
Changelog = "https://github.com/mkiyer/zna/releases"

[project.scripts]
# This creates the 'zna' command line tool
zna = "zna.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "src/zna/__init__.py"
metadata.version.regex = "^__version__ = \"(?P<value>.+)\"$"
wheel.packages = ["src/zna"]
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.15"
cmake.build-type = "Release"
